--- a/Students/templates/students/list.html
+++ b/Students/templates/students/list.html
@@ -1,4 +1,3 @@
-<!-- templates/students/list.html -->
 {% extends "base.html" %}
 
 {% block title %}Student List{% endblock %}
@@ -39,6 +38,10 @@
                             class="btn btn-info btn-sm">Details</a>
                         <a href="{% url 'update_student' student_id=student.student_id %}"
                             class="btn btn-warning btn-sm">Update</a>
+                        <a href="{% url 'student_delete' student_id=student.student_id %}"
+                            class="btn btn-danger btn-sm">
+                            Delete
+                        </a>
                     </td>
                 </tr>
                 {% endfor %}
